<resources>
    <string name="app_name">Facilitador de Boletos</string>
    <string name="title_camera">Câmera</string>
    <string name="title_archive">Arquivo</string>

    <string name="unknown_error">Erro desconhecido.</string>
    <string name="processing_file">Analisando arquivo</string>
    <string name="not_found_barcode">Não foi encontrado nenhum código de barras.</string>
    <string name="initial">Selecione um arquivo ou a câmera para encontrar o código de barras.</string>
    <string name="barcode_copy_success">Copiado com sucesso.</string>

    <string name="without_date">Sem data</string>
    <string name="value">R$ %1$s</string>
    <string name="copy">Copiar</string>
    <string name="pay">Vencimento em</string>
    <string name="doc_value">Valor do documento</string>
    <string name="required_password">Digite a senha do arquivo %1$s</string>
    <string name="cancel_digit_password">O arquivo requer senha</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">OK</string>

    <string name="new_invoice">Novo boleto</string>
    <string name="history_invoice">Histórico de boletos</string>
    <string name="was_read_in">Lido em</string>
    <string name="delete">Excluir</string>

    <string name="invoice_alert_title">Nome</string>
    <string name="hint_alert_title">Escreva um nome</string>
    <string name="invoice_title_default">Sem nome</string>

    <string name="empty_history_invoice">Nenhum boleto</string>
</resources>
