<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools" android:orientation="horizontal"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:gravity="center_vertical" app:cardBackgroundColor="@android:color/white"
                                   android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:layout_margin="16dp">

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/preview_image_height"
            android:layout_marginTop="8dp"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:drawablePadding="4dp"
            android:ellipsize="end"
            android:focusable="true"
            android:maxLines="1"
            android:nestedScrollingEnabled="true"
            android:text="@string/invoice_title_default"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_edit"
            app:drawableTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPreview" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/was_read_in"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/txtRead"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="10/12/2013"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:background="@drawable/layer_button_delete_background"
            android:drawableStart="@drawable/ic_delete"
            android:drawablePadding="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle">

            <TextView
                android:id="@+id/txtBarcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="CODEBAR"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/btnCopy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnCopy"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:background="@drawable/layer_button_copy_background"
                android:drawableStart="@drawable/ic_copy"
                android:drawablePadding="16dp"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/copy"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtBarcode"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="10/12/2013"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doc_value"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/txtValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="R$ 1000,00"
                    android:textAlignment="textEnd"
                    android:textColor="#24890B"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>